--- a/packages/frontend/src/globals/css/main.scss
+++ b/packages/frontend/src/globals/css/main.scss
@@ -1466,13 +1466,13 @@
     &.genai-solutions::before {
       content: "\e98f";
     }
-    &.case1::before{
+    &.machineLearning::before{
       content: "\e990";
     }
-    &.case2::before{
+    &.dataPreparation::before{
       content: "\e991";
     }
-    &.case3::before{
+    &.dataAnalysis::before{
       content: "\e992";
     }
     &.doc::before{
