Feature/tools detailed page (#2682)
* Tools Detailed Page

* Tools detailed page

* Tools Detailed page

* Tools Detailed page

* tools detail page

* tools detailed page

* tools detailed page

* tools detailed page

* tools detailed page

---------

Co-authored-by: SHPEEKA <SHPEEKA>

--- a/packages/frontend/src/globals/css/main.scss
+++ b/packages/frontend/src/globals/css/main.scss
@@ -1466,6 +1466,24 @@
     &.genai-solutions::before {
       content: "\e98f";
     }
+    &.machineLearning::before{
+      content: "\e990";
+    }
+    &.dataPreparation::before{
+      content: "\e991";
+    }
+    &.dataAnalysis::before{
+      content: "\e992";
+    }
+    &.doc::before{
+      content: "\e993";
+    }
+    &.sec::before{
+      content: "\e994";
+    }
+    &.tem::before{
+      content: "\e995";
+    }
   }
 
   .active-status {
