added workspace link

--- a/packages/fabric-mfe/src/components/workspaces/workspaces.scss
+++ b/packages/fabric-mfe/src/components/workspaces/workspaces.scss
@@ -217,6 +217,12 @@ hr {
 }
 }
 
+.workspaceLink {
+  i {
+    position: unset!important;
+  }
+}
+
 .bucketGrp {
   .bucketGrpList {
       .bucketGrpListItem {
