--- a/packages/frontend/src/components/mbc/filters/Filter.scss
+++ b/packages/frontend/src/components/mbc/filters/Filter.scss
@@ -7,3 +7,26 @@
       margin-right: 12px;
     }
 }
+
+.dvFilterWrapper{
+  .dvRange{
+    display: flex;
+    margin-bottom: 0px;
+    .dvStartRange{
+      margin-right: 10px;
+      width: 120px;
+    }
+    .dvEndRange{
+      margin-left: 0px;
+      margin-top: 31px;
+      margin-right: 10px;
+      width:120px
+    }
+    .speratorIcon{
+      margin-right: 16px;
+      margin-top: 40px;
+      font-size: 10px;
+      color: #d9dfe4;;
+    }
+  }
+} 
