Altered css for banner

--- a/packages/chronos-mfe/src/pages/chronosBanner/ChronosBanner.scss
+++ b/packages/chronos-mfe/src/pages/chronosBanner/ChronosBanner.scss
@@ -13,7 +13,7 @@
 
     .placeholder {
       display: flex;
-      width: 12%;
+      width: 175px;
 
       i {
         margin-right: 7px;
@@ -30,7 +30,6 @@
 
     .info {
       margin: 0;
-      width: 88%;
 
       p {
         margin: 0;
