--- a/packages/chronos-mfe/src/pages/chronosBanner/ChronosBanner.scss
+++ b/packages/chronos-mfe/src/pages/chronosBanner/ChronosBanner.scss
@@ -3,11 +3,11 @@
   margin: 0;
   background: #00adef;
   width: 100%;
-  padding: 15px 0px 15px 75px;
+  padding: 15px 27px 15px 75px;
+  justify-content: space-between;
 
   .content {
     display: flex;
-    flex: 88;
     margin: 0;
     justify-content: flex-start;
 
@@ -47,12 +47,12 @@
 
   .button {
     display: flex;
-    flex: 12;
     margin: 0;
     background: #00adef;
     border-color: #00adef;
     margin-top: 2.6px;
     height: 10px;
+    width: 220px;
 
     h4 {
       margin: 0;
