--- a/packages/dataentry-mfe/src/pages/dataEntryProject/data-entry-project.scss
+++ b/packages/dataentry-mfe/src/pages/dataEntryProject/data-entry-project.scss
@@ -185,3 +185,10 @@
     background-color: #383f49 !important;
   }
 }
+.btnContainer {
+  text-align: right;
+  margin-top: 20px;
+  button {
+    margin-left: 20px;
+  }
+}
