--- a/packages/data-product-mfe/src/components/dataTransfer/DataTransfers.style.scss
+++ b/packages/data-product-mfe/src/components/dataTransfer/DataTransfers.style.scss
@@ -70,6 +70,7 @@
         height: 29px;
         display: flex;
         align-items: center;
+        position: relative;
         cursor: pointer;
         .iconactive {
             opacity: 0.5;
