--- a/packages/frontend/src/components/mbc/codeSpace/codeSpaceCardItem/CodeSpaceCardItem.scss
+++ b/packages/frontend/src/components/mbc/codeSpace/codeSpaceCardItem/CodeSpaceCardItem.scss
@@ -153,7 +153,18 @@
     font-size: var(--font-size-icon-small);
     letter-spacing: 1px;
     border-radius: 2px;
-    margin-left: 20px;
+    margin-right: 15px;
+
+    &.wsStartStop {
+      border: 1px solid #00adef;
+      color: #00adef;
+      cursor: pointer;
+
+      &.wsStarted {
+        border: 1px solid #e84d47;
+        color: #e84d47;
+      }
+    }
 
     &.colloboration {
       border: 1px solid #35ADAC;
@@ -189,6 +200,7 @@
   bottom: 0;
   display: flex;
   justify-content: space-between;
+  padding: 0 20px;
   margin-bottom: 10px;
   div:first-child {
     margin: 7px 0px;
@@ -203,7 +215,7 @@
     border: 0;
     color: #99a5b3;
     float: right;
-    margin-right: 20px;
+    margin-left: 20px;
     outline: 0;
     padding: 0;
     &:hover {
