clientId and clientSecret addition to deployment model

--- a/packages/frontend/src/components/mbc/codeSpace/deployModal/DeployModal.scss
+++ b/packages/frontend/src/components/mbc/codeSpace/deployModal/DeployModal.scss
@@ -25,4 +25,11 @@
     padding-top: 33px;
   }
 
+  .saveSettingsBtn {
+    background-color: #00adef;
+    padding: 0 15px;
+    font-size: var(--font-size-default);
+    letter-spacing: 1px;
+    margin-right: 12px;
+  }
 }
