Added DataProduct Filter

--- a/packages/data-product-mfe/src/components/dataProduct/dataProductList.style.scss
+++ b/packages/data-product-mfe/src/components/dataProduct/dataProductList.style.scss
@@ -52,6 +52,7 @@
         height: 29px;
         display: flex;
         align-items: center;
+        position: relative;
         cursor: pointer;
         .iconactive {
             opacity: 0.5;
