--- a/packages/dss-mfe/src/components/CreateOrEditProject/CreateOrEditProject.scss
+++ b/packages/dss-mfe/src/components/CreateOrEditProject/CreateOrEditProject.scss
@@ -12,6 +12,24 @@
         margin-left: 40px;
     }
 
+    .extolloTou {
+        margin-left: 30px;
+
+        .configLink {
+            cursor: pointer;
+            margin-bottom: 10px;
+
+            a {
+                color: #00ADEF !important;
+            }
+        }
+
+        .errorMsg {
+            margin-top: 0px;
+            margin-left: 10px;
+        }
+    }
+
     .bucketColUsersList {
         margin-top: 12px;
         width: 90%;
