--- a/packages/dataentry-mfe/src/components/projectDetails/project-details.scss
+++ b/packages/dataentry-mfe/src/components/projectDetails/project-details.scss
@@ -1,8 +1,8 @@
-.form {  
+.container {  
   width: 650px;
   margin: 0 auto 20px;
-  .formHeader {
-    margin-bottom: 20px;
+  .header {
+    margin-bottom: 40px;
     text-align: center;
     p {
       font-size: 12px !important;
@@ -11,7 +11,7 @@
       text-align: center !important;
     }
   }
-  .formFooter {
+  .footer {
     display: flex;
     justify-content: flex-end;
   }
@@ -30,16 +30,17 @@
     width: calc(33.33% - 7px);
   }
 }
-.termsOfUseContent {
-  display: flex;
-  align-items: center;
-  margin-left: -10px;
-  .termsOfUseText {
-    color: #c0c8d0;
-    sup {
-      float: right;
-      top: -12px;
-      right: -8px;
-    }
+.projectItem {    
+  margin-bottom: 40px;
+  .label {
+    color: #99a5b3;
+    font-size: var(--font-size-smallest);
+    font-weight: bold;
+    margin-bottom: 0.5rem;
+  }
+  .value {
+    color: #d9dfe4 !important;
+    font-size: var(--font-size-default);
+    margin-bottom: 0;
   }
 }
