--- a/packages/dataentry-mfe/src/pages/dataEntryProjects/data-entry-projects.scss
+++ b/packages/dataentry-mfe/src/pages/dataEntryProjects/data-entry-projects.scss
@@ -1,95 +1,76 @@
 .mainPanel {
   padding: 72px 75px 30px 75px;
-
-  .wrapper {
-    width: 100%;
-    .caption {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 10px 0px;
-      margin-bottom: 10px;
-      h3 {
-        color: #dee3e8;
-      }
+  .caption {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 0px;
+    margin-bottom: 10px;
+    h3 {
+      color: #dee3e8;
     }
-
-    .listHeader {
-      margin-top: 10px;
-      float: right;
-      height: 29px;
-      display: flex;
-      align-items: center;
-      cursor: pointer;
-      .iconactive {
-          opacity: 0.5;
-          cursor: default;
-      }
-      .dividerLine {
-          height: 25px;
-          display: inline-block;
-          background-color: #252a33;
-          height: 25px;
-          margin: 0 10px 0 5px;
-          padding: 0;
-          width: 1px;
-      }
-      .iconInActive {
-          &:hover {
-              color: #00adef;
-          }
-      }
+  }
+  .listHeader {
+    margin-top: 10px;
+    float: right;
+    height: 29px;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    .iconActive {
+        opacity: 0.5;
+        cursor: default;
+    }
+    .dividerLine {
+        height: 25px;
+        display: inline-block;
+        background-color: #252a33;
+        height: 25px;
+        margin: 0 10px 0 5px;
+        padding: 0;
+        width: 1px;
+    }
+    .iconInactive {
+        &:hover {
+            color: #00adef;
+        }
     }
   }
 
-  .listHeaderContent {
-    width: 100%;
-    display: flex;
-    align-items: flex-end;
-    justify-content: flex-end;
-    flex-direction: column;
-    padding-left: 0px;
-    padding-bottom: 14px;
-    padding-left: 0px;
-    padding-right: 0;
-    .createNewArea {
+  .createNewArea {
+    margin-top: 15px;
+    button {
+      transition: none;
       width: 100%;
-      button {
-        transition: none;
-        width: 100%;
-        padding: 16px 0;
-        height: auto;
-        font-size: var(--font-size-headline);
-        .addCircle {
-          display: inline-block;
-          height: 45px;
-          width: 45px;
-          border-radius: 50%;
-          border: 2px solid #99A5B3;
-          vertical-align: middle;
-          margin-right: 20px;
-          position: relative;
-          i {
-            position: absolute;
-            top: 10px;
-            left: 12px;
-            color: #00adef;
-            font-weight: bold;
-            font-size: var(--font-size-icon);
-          }
-        }
-        &:hover {
-          border-color: #00adef;
+      padding: 16px 0;
+      height: auto;
+      font-size: var(--font-size-headline);
+      .addCircle {
+        display: inline-block;
+        height: 45px;
+        width: 45px;
+        border-radius: 50%;
+        border: 2px solid #99A5B3;
+        vertical-align: middle;
+        margin-right: 20px;
+        position: relative;
+        i {
+          position: absolute;
+          top: 10px;
+          left: 12px;
           color: #00adef;
+          font-weight: bold;
+          font-size: var(--font-size-icon);
         }
+      }
+      &:hover {
+        border-color: #00adef;
+        color: #00adef;
       }
     }
   }
 
   .content {
-    background-color: #252a33;
-    padding: 0 0 0px 0px;
-    min-width: 518px;
     .listHeader {
       align-items: flex-start;
       display: flex;
@@ -134,42 +115,21 @@
       font-size: var(--font-size-icon-medium);
     }
     .listContent {
-      min-height: 435px;
+      margin-top: 15px;
+      padding: 25px;
       display: flex;
-      width: 100%;
       flex-direction: column;
-      padding: 25px 31px 25px 38px;
-      align-items: flex-start;
-
-      p {
-        color: #979baf;
-        font-size: var(--font-size-default);
-        line-height: 17px;
-        margin-bottom: 20px;
-        margin-left: 0;
-        margin-top: 0;
-        text-align: left;
-      }
-      .subscriptionList {
-        width: 100%;
-      }
-      .subscriptionListEmpty {
+      justify-content: center;
+      .createNewProject {
         display: flex;
-        align-items: center;
-        justify-content: center;
         flex-direction: column;
         justify-content: center;
+        align-items: center;
         height: 300px;
-        position: relative;
         border: 1px solid #383f49;
-        width: 100%;
       }
-      .emptyBuckets {
+      .noProjects {
         text-align: center;
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: 20px;
-        margin-bottom: 20px;
       }
       button {
         a {
@@ -181,10 +141,9 @@
     &.cardView {
       background-color: transparent;
       .listContent {
-        padding-left: 0;
-        padding-right: 0;
+        padding: 0;
         width: calc(100% + 15px);
-        .subscriptionList {
+        .projectList {
           display: flex;
           flex-wrap: wrap;
         }
@@ -192,7 +151,143 @@
     }
   }
 }
+.noProjectContainer {
+  background: #1c2026;
+  min-height: 550px;
+  .messageContainer {
+    padding-top: 80px;
+    margin-bottom: 35px;
+    text-align: center;
+    .lead {
+      font-size: 20px;
+      span {
+          color: #00adef;
+      }
+    }
+    p + p {
+        color: #99a5b3;
+        font-size: 14px;
+    }
+  }
+  .btnContainer {
+      display: flex;
+      justify-content: center;
+  }
+}
+.projectsContainer {
+  display: flex;
+  column-gap: 15px;
+  row-gap: 15px;
+  flex-wrap: wrap;
 
-.infoPopup {
-  width: 500px;
+  > div {
+    width: calc(25% - 12px);
+  }
+}
+.createNewCard {
+  position: relative;
+  border: 1px solid #383F49;
+  cursor: pointer;
+
+  .addicon {
+    top: calc(50% - 31px);
+    width: 63px;
+    height: 63px;
+    border: 1px solid #fff;
+    border-radius: 50%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    margin: 0 auto;
+    &:after {
+      content: '';
+      position: absolute;
+      width: 50%;
+      height: 1px;
+      background-color: #00ADEF;
+      left: 25%;
+      transform: rotate(90deg);
+    }
+    &:before {
+      content: '';
+      position: absolute;
+      width: 50%;
+      height: 1px;
+      background-color: #00ADEF;
+      left: 25%;
+      margin: 0 auto;
+      transform: rotate(180deg);
+      top: 49%;
+    }
+  }
+  .addlabel {
+    font-size: var(--font-size-headline);
+    line-height: 23px;
+    position: absolute;
+    word-break: break-word;
+    display: block;
+    width: 100%;
+    text-align: center;
+    bottom: 20px;
+  }
+  
+  &:hover {
+    border-color: #00adef;
+    .addlabel {
+      color: #00adef;
+    }
+  }
+}
+.listContainer {
+  background: #252a33;
+  margin-top: 25px;
+  padding: 25px 31px 25px 38px;
+}
+.bucketList {
+  button {
+    i {
+        font-size: var(--font-size-icon);
+        &:hover {
+          color: #00adef;
+        }
+    }
+  }
+}
+.projectTable {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  .tableHeader {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    font-family: "Roboto-Medium";
+    padding: 10px 0px 10px 0px;
+    color: #99a5b3;
+    border-bottom: 1px solid #383f49;
+    div {
+      flex: 1;
+      span {
+        font-size: var(--font-size-smallest);
+        cursor: pointer;
+      }
+    }
+    .col1 {
+      min-width: 30%;
+    }
+    .col2 {
+      min-width: 20%;
+    }
+    .col3 {
+      min-width: 20%;
+    }
+    .col4 {
+      min-width: 20%;
+    }
+    .col5 {
+      min-width: 10%;
+      text-align: right;
+    }
+  }
 }
