Added provision to dataproduct on datalake

--- a/packages/datalake-mfe/src/components/dataProductForm/data-product-form.scss
+++ b/packages/datalake-mfe/src/components/dataProductForm/data-product-form.scss
@@ -1,3 +1,16 @@
 .highlightText {
+  font-size: 13px;
+  color:  #c0c8d0;
+}
+.radioBtnsGrid {
+  display: flex;
+}
+.label{
   font-size: 14px;
+}
+.submitBtn{
+  margin-top: 20px;
+}
+.ExistingDpContainer{
+  margin-top: 10px;
 }
