--- a/packages/datalake-mfe/src/components/graph-table.scss
+++ b/packages/datalake-mfe/src/components/graph-table.scss
@@ -34,6 +34,9 @@
 .btnDelete {
   background-color: #e94d47!important;
 }
+.btnDisable {
+  opacity: 0.6;
+}
 .btnAdd {
   background-color: #12e7ab!important;
 }
