Added provision to dataproduct on datalake

--- a/packages/datalake-mfe/src/pages/graph/graph.scss
+++ b/packages/datalake-mfe/src/pages/graph/graph.scss
@@ -78,12 +78,11 @@
   }
 
   .warningBtn {
-    margin-right: 0px;
-    padding-right: 0px;
-    margin-bottom: 16px;
+    margin-left: 0px;
+    padding-left: 0px;
 
     i {
-      font-size: 8px;
+      font-size: 11px;
       color: var(--color-orange);
     }
   }
