--- a/packages/datalake-mfe/src/pages/graph/graph.scss
+++ b/packages/datalake-mfe/src/pages/graph/graph.scss
@@ -40,7 +40,7 @@
   border: none !important;
   color: #00adef;
   height: auto;
-  margin: 10px 10px 0px 10px;
+  margin: 0px 10px;
   outline: none;
   padding: 0 2px;
   align-content: baseline;
@@ -53,9 +53,6 @@
     outline: none;
   }
 
-  i {
-    margin-top: 10px;
-  }
 }
 
 .dpWrapper {
@@ -138,7 +135,6 @@
       h2 {
         display: inline-flex;
         margin-left: 15px;
-        position: relative;
         top:3px;
 
         span {
