--- a/packages/frontend/src/components/mbc/codeSpace/manageCodeSpace/CodeSpaceList.scss
+++ b/packages/frontend/src/components/mbc/codeSpace/manageCodeSpace/CodeSpaceList.scss
@@ -13,11 +13,13 @@
     }
   }
   .actionBtn{
+    background-color: #252a33 !important;
+    border-color: #252a33 !important;
     &:hover{
       color: #00adef;
+      background-color: #252a33 !important;
     }
   }
-  
   .securityConfigCol {
     min-width: 60px;
   
