--- a/packages/dss-mfe/src/components/CreateOrEditProject/CreateOrEditProject.scss
+++ b/packages/dss-mfe/src/components/CreateOrEditProject/CreateOrEditProject.scss
@@ -14,6 +14,11 @@
 
     .extolloTou {
         margin-left: 30px;
+        display: inline-flex;
+        position: relative;
+        .touLabel{
+            margin-top: 11px;
+        }
 
         .configLink {
             cursor: pointer;
