--- a/packages/code-space-mfe/src/components/newCodeSpace/NewCodeSpace.scss
+++ b/packages/code-space-mfe/src/components/newCodeSpace/NewCodeSpace.scss
@@ -215,6 +215,10 @@
                     margin-left: -10px;
                   }
                   min-width: 80px;
+                  .permissionContent {
+                    align-self: center;
+                    margin-bottom: 0;
+                  }
                 }
                 i {
                   margin: -7px 7px 0 0;
