--- a/packages/frontend/src/components/mbc/codeSpace/manageCodeSpace/ManageCodeSpace.scss
+++ b/packages/frontend/src/components/mbc/codeSpace/manageCodeSpace/ManageCodeSpace.scss
@@ -83,3 +83,18 @@
     color: #00adef;
   }
 }
+
+.actionColumn {
+  text-align: right !important;
+  padding-right: 38px !important;
+}
+
+.ciColumn {
+  max-width: 100px;
+  width: 100px;
+}
+
+.softwareColumn {
+  max-width: 300px;
+  width: 300px;
+}
