data entry changes

--- a/packages/dataentry-mfe/src/pages/dataEntryProjects/data-entry-projects.scss
+++ b/packages/dataentry-mfe/src/pages/dataEntryProjects/data-entry-projects.scss
@@ -274,18 +274,21 @@
       }
     }
     .col1 {
-      min-width: 30%;
+      min-width: 20%;
     }
     .col2 {
       min-width: 20%;
     }
     .col3 {
-      min-width: 20%;
+      min-width: 16.66%;
     }
     .col4 {
-      min-width: 20%;
+      min-width: 16.66%;
     }
     .col5 {
+      min-width: 16.66%;
+    }
+    .col6 {
       min-width: 10%;
       text-align: right;
     }
