--- a/packages/code-space-mfe/src/components/manageCodeSpace/CodeSpaceList.scss
+++ b/packages/code-space-mfe/src/components/manageCodeSpace/CodeSpaceList.scss
@@ -13,8 +13,11 @@
     }
   }
   .actionBtn{
+    background-color: #252a33 !important;
+    border-color: #252a33 !important;
     &:hover{
       color: #00adef;
+      background-color: #252a33 !important;
     }
   }
   
