addition of isUseCaseOwner field for solution team members

--- a/packages/frontend/src/components/mbc/addTeamMember/addTeamMemberModal/AddTeamMemberModal.scss
+++ b/packages/frontend/src/components/mbc/addTeamMember/addTeamMemberModal/AddTeamMemberModal.scss
@@ -246,3 +246,8 @@
   line-height: 12px;
   font-family: 'Roboto-Medium';
 }
+
+.permissionContent {
+  align-self: center;
+  margin-bottom: inherit !important;
+}
