Bug fixes - #1252217 and #1202592

--- a/packages/frontend/src/components/mbc/allSolutions/solutionListRowItem/SolutionListRowItem.scss
+++ b/packages/frontend/src/components/mbc/allSolutions/solutionListRowItem/SolutionListRowItem.scss
@@ -16,12 +16,13 @@
     }
   }
 }
-
-label{
-  color: #697582;
-  font-size: smaller;
-  margin-bottom: 0rem;
-  margin-right: 0.2rem;
+.solutionRow {
+  label{
+    color: #697582;
+    font-size: smaller;
+    margin-bottom: 0rem;
+    margin-right: 0.2rem;
+  }
 }
 
 .draftIndicatorCol {
