Added tableNav and added reserved keyword validation for tablename

--- a/packages/datalake-mfe/src/components/graph-table.scss
+++ b/packages/datalake-mfe/src/components/graph-table.scss
@@ -72,6 +72,9 @@
   .table:hover .table-format {
     display: none;
   }
+  .table-selected{
+    border-color: #00adef;
+  }
   .table-disabled {
     opacity: 0.6;
     pointer-events: none;
