codespace recipe bug and style fixes

--- a/packages/code-space-mfe/src/components/manageCodeSpace/CodeSpaceList.scss
+++ b/packages/code-space-mfe/src/components/manageCodeSpace/CodeSpaceList.scss
@@ -61,5 +61,9 @@
       padding-right: 15px;
     }
   }
-  
+  .chips {
+    margin-right: 8px;
+    padding: 8px 16px;
+    margin-bottom: 0;
+  }
   
