--- a/packages/code-space-mfe/src/components/codeSpaceRecipe/CodeSpaceRecipe.scss
+++ b/packages/code-space-mfe/src/components/codeSpaceRecipe/CodeSpaceRecipe.scss
@@ -5,13 +5,11 @@
   h3 {
     font-size: 24px;
     color: #dee3e8; 
-    margin-top: 12px;
-    margin-bottom: 22px;
-    margin-left: 20px;
+    margin-top: 20px;
+    margin-bottom: 25px;
   }
 
   .btnConatiner{
-    margin-right: 70px;
     text-align: right;
     margin-bottom: 12px;
   }
@@ -54,10 +52,7 @@
 
   .firstPanel {
     background: #252a33;
-    margin-bottom: 15px;
-    padding-top: 20px;
-    padding-left: 20px;
-    padding-bottom: 20px;
+    padding: 60px 70px;
     .textDesc {
       color: #697582;
     }
@@ -68,19 +63,22 @@
 
     .flex {
       display: flex;
-      justify-content: space-between;
+      justify-content: flex-start;
       flex-wrap: wrap;
+      column-gap: 14px;
       > .col {
         width: 100%;
       }
       > .col2 {
-        width: calc(50% - 7px);
+        width: calc(50% - 10px);
         position: relative;
       }
       > .col3 {
-        width: calc(33.33% - 7px);
+        width: calc(33.33% - 10px);
       }
-      
+      > .col4 {
+        width: calc(25% - 7px);
+      }
     }
 
     .SelectBoxWrapper {
@@ -101,10 +99,6 @@
         width: calc(30% - 9px);
       }
 
-    }
-
-    .formWrapper {
-      margin: 60px 70px 0;
     }
 
     .wrapper {
@@ -220,7 +214,6 @@
 }
 
 .sectionHeader {
-  margin-left: 68px !important;
   margin-top: 40px !important;
 }
 
