--- a/packages/frontend/src/components/mbc/addTeamMember/teamMemberListItem/TeamMemberListItem.scss
+++ b/packages/frontend/src/components/mbc/addTeamMember/teamMemberListItem/TeamMemberListItem.scss
@@ -101,4 +101,13 @@
   .orderDown {
     bottom: 0px;
   }
+  .draftIndicator {
+    padding: 2px 8px;
+    border: 1px solid #697582;
+    color: #697582;
+    font-size: var(--font-size-icon-small);
+    letter-spacing: 1px;
+    border-radius: 2px;
+    margin-left: 8px;
+  }
 }
