--- a/packages/code-space-mfe/src/components/codeSpaceRecipe/ViewRecipe.scss
+++ b/packages/code-space-mfe/src/components/codeSpaceRecipe/ViewRecipe.scss
@@ -1,85 +1,47 @@
-.flexLayout {
-    display: flex;
-    justify-content: space-between;
-
-    > div {
-      width: calc(50% - 7px);
-    }
-    &.fourColumn {
-      > div {
-        width: calc(25% - 7px);
-      }
-    }
-  }
-  .recipePre{
-    white-space: pre-wrap;
-    font-family: "Roboto-Medium";  
-  }
-  .recipeLable{
-    color:#a9adb6 ;
-    font-weight: 70px;
-    width:80px;
-  }
-  .titleWrapper{
-    margin-bottom: 20px;
-  .title{
-    font-size: var( --font-size-headline-medium);
-  }
-}
-.modalContent {
-  padding-top: 8px;
-  .flexLayout {
-    > div {
-      width: calc(50% - 30px);
+.container {  
+  margin: 0 auto 20px;
+  padding: 0 30px;
+  .header {
+    margin-bottom: 40px;
+    text-align: left;
+    p {
+      font-size: 12px !important;
+      margin: 0;
+      color: #acb8c4 !important;
+      text-align: center !important;
     }
   }
-  .teamListWrapper {
-    margin: 8px -25px 0 5px;
-  }
-  .teamMemberWrapper {
-    min-height: 68px;
-  }
-  .membersList {
-    padding: 0 15px 0 0;
-    max-height: 100px;
-    overflow-y: auto;
-    overflow-x: hidden;
-    margin-left: -40px;
-  
-    &::-webkit-scrollbar-thumb {
-      background: #00adef;
-      border-radius: 10px;
-    }
-    &::-webkit-scrollbar-track {
-      background: #293f55;
-    }
-    &::-webkit-scrollbar {
-      width: 5px;
-      height: 5px;
-    }
-  }
-  .noMembers p {
-    margin: 0;
-    text-align: center;
-    color: #99a5b3;
-  }
-  .collabAvatar {
-    padding: 0 25px 25px 0;
-    max-height: calc(90vh - 110px);
-    overflow-y: auto;
-    overflow-x: hidden;
-  }
-  .apiKey {
-    display: flex;
-    align-items: center;
-    padding: 16px 0;
-  }
-  .btnContainer {
+  .footer {
     display: flex;
     justify-content: flex-end;
   }
 }
-.noCollaborator {
-  padding-left: 40px;
-  color: #99A5B3;
+.flex {
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  column-gap: 9px;
+  > .col {
+    width: 100%;
+  }
+  > .col2 {
+    width: calc(50% - 7px);
+  }
+  > .col3 {
+    width: calc(33.33% - 7px);
+  }
+}
+.projectItem {    
+  margin-bottom: 40px;
+  .label {
+    color: #99a5b3;
+    font-size: var(--font-size-smallest);
+    font-weight: bold;
+    margin-bottom: 0.5rem;
+  }
+  .value {
+    color: #d9dfe4 !important;
+    font-size: var(--font-size-default);
+    margin-bottom: 0;
+  }
 }
